Use class.getDeclaredConstructor().newInstance() to replace deprecated class.newInstance() (#16592)